--- a/scoreKeeper.css
+++ b/scoreKeeper.css
@@ -3,22 +3,20 @@
 }
 
 body {
-	text-align: center;
 	font-family: lato;
 	background: linear-gradient(to right,rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("game.jpg") no-repeat fixed center;
 }
 
 .container {
-	background: linear-gradient(to right,rgba(0,0,0,0.2),rgba(0,0,0,0.2));
+	background: linear-gradient(to right,rgba(0,0,0,0.2),rgba(0,0,0,0.1));
 	color: #ffffff;
 	text-align: center;
 	padding: 30px;
+	margin-top: 100px;
 }
 
-.fa-hand-rock,
-.fa-hand-paper,
-.fa-hand-scissors {
-	font-size: 40px;
+.buttons {
+	margin: 30px 0;
 }
 
 #p1, #p2, #reset {
@@ -28,5 +26,18 @@ body {
 	font-size: 15px;
 	font-weight: bold;
 	text-transform: uppercase;
-	border-radius: 5px;
+	border-radius: 8px;
+}
+
+.fa-hand-rock,
+.fa-hand-paper,
+.fa-hand-scissors {
+	font-size: 50px;
+}
+
+#text {
+	font-weight: bold;
+	font-size: 20px;
+	margin-top: 10px;
+	text-transform: uppercase;
 }
